# simplified_kafka_rust

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs  topic_db.rs
src/helpers/: client_handlers.rs  io.rs  listeners.rs  message_parsers.rs  mod.rs
